CMS 3.2 from DS (8/31~9/4 DS SVN Revision: 28~32)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@3269 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -5,11 +5,11 @@
 -----------------------------------------------------------------------------*/
 
 #epcurate-nav {
-    top: 0;
+    top: 0 !important;
 }
 
 #content-wrap {
-    top: 45px;
+    top: 45px !important;
 }
 
 .epcurate-curation #content-main-wrap {
@@ -553,459 +553,4 @@
 
 #content-wrap form .form-btn .publish-btn .glow:hover span input {
     background: url(../images/bg_btn_glow_middle_press.png) repeat 0 0;
-}
-
-/**
-*
-* =epcurate-curation
-*
-**/
-
-#epcurate-curation {
-    overflow: hidden;
-    background: url(../images/bg_tab_bar2.png) repeat-x;
-}
-
-#epcurate-curation #video-player {
-    float: left;
-    margin-top: 56px;
-}
-
-#epcurate-curation #video-player .video {
-    width: 349px;
-    height: 196px;
-    background-color: #000;
- 
- }
-
-#epcurate-curation #curation-content {
-overflow: hidden;
-    margin: 16px 0 26px 0;
-}
-
-/**
-*
-* =curation-content
-*
-**/
-
-#curation-content ul.tabs {
-    overflow: hidden;
-}
-
-#curation-content ul.tabs li {
-    float: left;
-    height: 26px;
-}
-
-#curation-content ul.tabs li span {
-    display: block;
-    padding-right: 8px;
-    background: url(../images/bg_tab_left_off_right.png) no-repeat right 0;
-}
-
-#curation-content ul.tabs li span a {
-    display: block;
-    width: 99px;
-    height: 26px;
-    background: url(../images/bg_tab_middle_off.png) repeat-x;
-    color: #777;
-    font-family: Helvetica;
-    font-size: 15px;
-    line-height: 26px;
-    text-decoration: none;
-    text-align: center;
-}
-
-#curation-content ul.tabs li.first {
-    padding-left: 8px;
-    background: url(../images/bg_tab_left_off_left.png) no-repeat 0 0;
-}
-
-#curation-content ul.tabs li.first.on {
-    padding-left: 8px;
-    background: url(../images/bg_tab_left_on_left.png) no-repeat 0 0;
-}
-
-#curation-content ul.tabs li.first.on span {
-    background: url(../images/bg_tab_left_on_right.png) no-repeat right 0;
-}
-
-#curation-content ul.tabs li.first.on span a {
-    background: url(../images/bg_tab_middle_on.png) repeat-x;
-}
-
-#curation-content ul.tabs li.on span {
-padding-right: 8px;
-    background: url(../images/bg_tab_left_on_right.png) no-repeat right 0;
-}
-
-#curation-content ul.tabs li.on span a {
-    background: url(../images/bg_tab_middle_on.png) repeat-x;
-}
-
-#curation-content ul.tabs li.last span {
-    background: url(../images/bg_tab_right_off_right.png) no-repeat right 0;
-}
-
-#curation-content ul.tabs li.last.on span {
-    background: url(../images/bg_tab_right_on_right.png) no-repeat right 0;
-}
-
-/**
-*
-* =curation-content content
-*
-**/
-
-#curation-content .content ul.yt-category {
-    overflow: hidden;
-    padding: 15px 0 0 60px;
-}
-
-#curation-content .content ul.yt-category li {
-    float: left;
-    height: 29px;
-    margin-right: 12px;
-    padding-right: 14px;
-    background: url(../images/line01.png) no-repeat right center;
-}
-
-#curation-content .content ul.yt-category li.playlist,
-#curation-content .content ul.yt-category li.last {
-    background: none;
-}
-
-#curation-content .content ul.yt-category li.playlist {
-    margin-right: 3px;
-}
-
-#curation-content .content ul.yt-category li a {
-    display: block;
-    height: 29px;
-    padding-left: 25px;
-    background: url(../images/icon_youtube_sm.png) no-repeat 0 center;
-    color: #777;
-    font-weight: bold;
-    font-size: 13px;
-    line-height: 29px;
-}
-
-#curation-content .content ul.yt-category li.on a {
-    font-weight: normal;
-    text-decoration: none;
-}
-
-#curation-content .content ul.yt-category li .select {
-	position: relative;
-    overflow: auto;
-    float: left;
-	width: 220px;
-	height: 29px;
-    margin-right: 10px;
-    padding-left: 4px;
-    background: url(../images/input_box_left.png) no-repeat 0 0;
-}
-
-#curation-content .content ul.yt-category li .select .select-btn {
-	padding: 0;
-	width: 22px;
-	height: 23px;
-	background: url(../images/btns.png) 0 -400px no-repeat;
-	position: absolute;
-	top: 3px;
-	right: 5px;
-	z-index: 55;
-	cursor: pointer;
-}
-
-#curation-content .content ul.yt-category li .select .select-txt {
-    overflow: hidden;
-    height: 29px;
-    padding: 0 4px 0 0;
-    background: url(../images/input_box_right.png) no-repeat right 0;
-    font-size: 13px;
-    line-height: 29px;
-    white-space: nowrap;
-    text-indent: 5px;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    -ms-text-overflow: ellipsis;
-    -moz-binding: url('ellipsis.xml#ellipsis');
-}
-
-#curation-content .content ul.yt-category li .select .select-txt a {
-    display: block;
-    height: 29px;
-    padding-right: 4px;
-    background: url(../images/input_box_middle.png) repeat-x;
-    color: #999;
-    text-decoration: none;
-}
-
-#curation-content .content ul.yt-category li .select.disable {
-    background: url(../images/input_box_left_disable.png) no-repeat 0 0;
-}
-
-#curation-content .content ul.yt-category li .select.disable .select-btn,
-#curation-content .content ul.yt-category li .select .select-btn:hover {
-	background-position: 0 -501px;
-}
-
-#curation-content .content ul.yt-category li .select.disable .select-txt {
-    background: url(../images/input_box_right_disable.png) no-repeat right 0;
-}
-
-#curation-content .content ul.yt-category li .select.disable .select-txt a {
-    background: url(../images/input_box_middle_disable.png) repeat-x;
-}
-
-#curation-content .content .video-list img.youtube {
-    margin: 30px 0 27px 273px;
-}
-
-#curation-content .content .video-list {
-    float: left;
-}
-
-#curation-content .content .video-list .btns {
-    width: 148px;
-    margin: 0 0 0 255px;
-}
-
-/**
-*
-* =storyboard
-*
-**/
-
-#storyboard {
-    clear: both;
-    padding: 11px 0 50px 17px;
-    background-color: #eee;
-}
-
-#storyboard p {
-    margin-bottom: 26px;
-    color: #777;
-    font-weight: bold;
-    font-size: 13px;
-}
-
-#storyboard p span {
-    margin-left: 25px;
-    font-weight: normal;
-}
-
-#storyboard .storyboard-list {
-    position: relative;
-    height: 59px;
-}
-
-#storyboard .storyboard-list ul {
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 5700px;
-    height: 59px;
-}
-
-#storyboard .storyboard-list ul li {
-    float: left;
-    width: 88px;
-    height: 53px;
-    margin-right: 20px;
-    border: 3px dashed #fff;
-    color: #777;
-    font-size: 13px;
-}
-
-/**
-*
-* =video-control
-*
-**/
-
-#video-control {
-overflow: hidden;
-position: relative;
-width: 100%;
-height: 44px;
-background: #000 url(../images/bg_controlbar.png) 0 bottom repeat-x;
-}
-
-#progress-bar {
-    position: absolute;
-    top: 8px;
-    left: 0;
-    width: 100%;
-    height: 8px;
-    background: #2d3135;
-}
-
-#loaded {
-    width: 50%;
-    height: 8px;
-    background: #666;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 31;
-}
-
-#played {
-    width: 30%;
-    height:8px;
-    background: #aeaeae;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 32;
-}
-
-#play-dragger {
-    width: 18px;
-    height: 18px;
-    background: url(../images/btn_knob.png) 0 0 no-repeat;
-    position: absolute;
-    top: 5px;
-    left: 0;
-    z-index: 35;
-    cursor: pointer;
-}
-
-#video-control ul {
-    overflow: hidden;
-    height: 25px;
-    padding-top: 16px;
-}
-
-#video-control ul li {
-    float: left;
-}
-
-#btn-prev {
-    width: 34px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -298px;
-    cursor: pointer;
-}
-
-#btn-prev:hover,
-#btn-prev.on {
-    background-position: 0 -348px;
-}
-
-#btn-play {
-    width: 57px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 1px 0 no-repeat;
-    cursor: pointer;
-}
-
-#btn-play:hover, #btn-play.on {
-    background-position: 0 -50px;
-}
-
-#btn-pause {
-    width: 57px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 0 -98px no-repeat;
-    cursor: pointer;
-}
-
-#btn-pause:hover,
-#btn-pause.on {
-    background-position: 0 -148px;
-}
-
-#btn-next {
-    width: 34px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -198px;
-    cursor: pointer;
-}
-
-#btn-next:hover,
-#btn-next.on {
-    background-position: 0 -248px;
-}
-
-#volume-control {
-    width: 101px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -398px;
-    position: relative;
-}
-
-#volume-bar {
-    width: 53px;
-    height: 5px;
-    background: url(../images/bg_volumebar.png) 0 3px no-repeat;
-    position: absolute;
-    top: 10px;
-    right: 10px; 
-}
-
-#volume-dragger {
-    width: 6px;
-    height: 16px;
-    background: url(../images/btn_dragger.png) 0 0 no-repeat;
-    position: absolute;
-    top: 7px;
-    left: 67px;
-    z-index: 35;  
-    cursor: pointer;
-}
-
-#play-time {
-    width: 91px;
-    height: 25px;
-    padding-right: 5px;
-    background: #000 url(../images/btn_controls.png) 0 -448px no-repeat;
-    font-size: 13px;
-    line-height: 25px;
-    text-align: right;
-}
-
-#played-length {
-    color: #fff;
-}
-
-#play-time .divider {
-    padding: 0 2px;
-}
-
-#btn-volume {
-    width: 20px;
-    height: 13px;
-    background: url(../images/btn_controls.png) 0 -600px;
-    position: absolute;
-    top: 7px;
-    left: 8px;
-    cursor: pointer;
-}
-
-#btn-volume.quiet {
-    background-position: 0 -650px;
-}
-
-#btn-volume.loud {
-    background-position: 0 -800px;
-}
-
-#btn-volume.mute {
-    background-position: 0 -750px;
-}
-
-#btn-expand {
-    width: 27px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 0 -498px no-repeat;
-    cursor: pointer;
-}
-
-#btn-expand:hover, #btn-expand.on {
-    background-position: 0 -548px;
 }
