--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -11,7 +11,7 @@
 **/
 
 #channel-list {
-    width: 100%;
+	padding-top: 2px;
     border-right: 1px solid #A4A09B;
     border-left: 1px solid #A4A09B;
     background: url(../images/bg_divider.png) repeat-x 0 top;
@@ -20,6 +20,10 @@
 #channel-list li {
     position: relative;
     background: url(../images/bg_divider.png) repeat-x 0 bottom;
+}
+
+#channel-list li.ui-sortable-helper {
+    border: 1px solid #a4a09b;
 }
 
 #channel-list li:hover {
@@ -36,9 +40,20 @@
     padding: 7px 4px 4px 8px;
 }
 
+#channel-list li .photo-list a span {
+	display: block;
+    position: absolute;
+	top: 40px;
+	left: 5px;
+	width: 152px;
+	color: #777;
+	font-size: 17px;
+	text-align: center;
+}
+
 #channel-list li .photo-list img {
     float: left;
-    margin: 0 5px 5px 0;
+    margin: 0 5px 6px 0;
     border: none;
 }
 
@@ -55,6 +70,10 @@
     opacity: 0.7;
     filter: alpha(opacity=70);
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+}
+
+#channel-list li .photo-list a:hover span {
+	display: none;
 }
 
 #channel-list li .photo-list a:hover img.watermark {
@@ -103,7 +122,7 @@
 #channel-list li .func-wrap {
     float: right;
     position: relative;
-    width: 200px;
+    width: 166px;
     height: 103px;
 }
 
@@ -159,6 +178,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.add.disable,
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.add.disable:hover {
     background-position: 0 -600px;
+	cursor: default;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.add:hover {
@@ -172,6 +192,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.detail.disable,
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.detail.disable:hover {
     background-position: 0 -702px;
+	cursor: default;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.detail:hover {
@@ -185,6 +206,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.setting.disable,
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.setting.disable:hover {
     background-position: 0 -804px;
+	cursor: default;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.setting:hover {
@@ -198,6 +220,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.del.disable,
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.del.disable:hover {
     background-position: 0 -906px;
+	cursor: default;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.del:hover {
@@ -207,15 +230,21 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip {
     display: none;
     position: absolute;
-    top: -27px;
+    top: -30px;
     left: -20px;
     height: 32px;
-    background: url(../images/bg_tip_bottom.png) no-repeat 23px bottom;
     color: #777;
     font-size: 13px;
     text-align: center;
     text-decoration: none;
     text-indent: 0;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip img {
+	position: absolute;
+	bottom: 1px;
+	left: 24px;
+	border: none;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.add .tip {
@@ -229,33 +258,39 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.setting .tip {
     left: -50px;
     width: 120px;
-    background-position: 54px bottom;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a.del .tip {
     left: -90px;
     width: 135px;
-    background-position: 95px bottom;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.setting .tip img{
+	left: 54px;
+}
+
+#channel-list li .func-wrap .func-btns .btn-wrap ul li a.del .tip img {
+    left: 94px;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip .tip-left {
     display: block;
     height: 28px;
     padding-left: 7px;
-    background: url(../images/bg_tip_bottom_left.png) no-repeat 0 0;
+    background: url(../images/bg_tip_left.png) no-repeat 0 0;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip .tip-right {
     display: block;
     height: 28px;
     padding-right: 7px;
-    background: url(../images/bg_tip_bottom_right.png) no-repeat right 0;
+    background: url(../images/bg_tip_right.png) no-repeat right 0;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li a .tip .tip-middle {
     display: block;
     height: 28px;
-    background: url(../images/bg_tip_bottom_middle.png) repeat-x;
+    background: url(../images/bg_tip_middle.png) repeat-x;
     line-height: 28px;
 }
 
@@ -265,20 +300,21 @@
 
 #channel-list li .func-wrap p.drag {
     position: absolute;
-    top: 2px;
+    top: 0;
     right: 0;
     width: 34px;
-    height: 99px;
+    height: 101px;
     background: #ddd url(../images/icon_move.png) no-repeat center center;
     text-indent: -100000px;
 }
 
 #channel-list li .func-wrap p.drag {
-    background: #eee url(../images/icon_move.png) no-repeat center center;
+    background: #dedede url(../images/icon_move.png) no-repeat center center;
 }
 
+#channel-list li.ui-sortable-helper .func-wrap p.drag,
 #channel-list li .func-wrap p.drag:hover {
-    cursor:url(../images/icon_drop.png), move;
+    background-color: #f8f8f8;
 }
 
 /**
@@ -289,11 +325,11 @@
 
 #content-main-wrap form {
     position: relative;
+    min-height: 450px;
     padding: 0 0 40px 0;
 }
 
 #content-main-wrap form .fminput {
-    overflow: auto;
     margin-bottom: 10px;
 }
 
@@ -312,7 +348,6 @@
 
 #content-main-wrap form .fminput .fmfield {
     position: relative;
-    overflow: auto;
     color: #999;
     font-size: 13px;
 }
@@ -332,17 +367,13 @@
 }
 
 #content-main-wrap form .fminput .fmfield p.text span .text {
-    width: 180px;
+    width: 485px;
     height: 29px;
     border: none;
     background: url(../images/input_box_middle.png) repeat-x;
     color: #777;
     font-family: Helvetica;
     font-size: 13px;
-}
-
-#content-main-wrap form .fminput .fmfield p.text span .tag {
-    width: 485px;
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea {
@@ -361,18 +392,21 @@
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span .textarea {
-    overflow: hidden;
-    width: 485px;
-    height: 87px;
-    padding-bottom: 5px;
+    width: 475px;
+    height: 78px;
+	margin: 1px 0 0;
+    padding: 5px;
     border: none;
-    background: url(../images/input_box_middle_lg.png) repeat-x;
+    border-top: 1px solid #b5b5b5;
+	border-bottom: 1px solid #b5b5b5;
     color: #777;
     font-family: Helvetica;
     font-size: 13px;
+	resize: none;
 }
 
 #content-main-wrap form .fminput .fmfield p.img {
+    position: relative;
     float: left;
     overflow: hidden;
     width: 129px;
@@ -381,6 +415,29 @@
     padding: 10px 0 10px 0;
     background: url(../images/thumbnail_box_lg.png) no-repeat 0 0;
     text-align: center;
+}
+
+#content-main-wrap form .fminput .fmfield p.default {
+	height: 82px;
+	padding: 0;
+	background: none;
+}
+
+#content-main-wrap form .fminput .fmfield p.img .thumbnail {
+    width: 110px;
+    height: 62px;
+}
+
+#content-main-wrap form .fminput .fmfield p.default .thumbnail {
+    width: 129px;
+    height: 82px;
+}
+
+#content-main-wrap form .fminput .fmfield p.img img.loading {
+    display: none;
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 #content-main-wrap form .fminput .fmfield p.btns {
@@ -394,7 +451,6 @@
 
 #content-main-wrap form .fminput .fmfield .select {
 	position: relative;
-    overflow: auto;
     float: left;
 	width: 180px;
 	height: 29px;
@@ -419,8 +475,12 @@
 	cursor: pointer;
 }
 
-#content-main-wrap form .fminput .fmfield .select.disable .select-btn,
+#content-main-wrap form .fminput .fmfield .select .select-btn.on,
 #content-main-wrap form .fminput .fmfield .select .select-btn:hover {
+	background-position: 0 -451px;
+}
+
+#content-main-wrap form .fminput .fmfield .select.disable .select-btn {
 	background: url(../images/btns.png) no-repeat 0 -501px;
 }
 
@@ -456,12 +516,76 @@
     background: url(../images/input_box_middle_disable.png) repeat-x;
 }
 
+#content-main-wrap form .fminput .fmfield .select.category .select-list {
+	overflow: hidden;
+	width: 536px;
+}
+
+#content-main-wrap form .fminput .fmfield .select.category .select-list li {
+	float: left;
+	height: 26px;
+}
+
+#content-main-wrap form .fminput .fmfield .select .select-list {
+	display: none;
+	position: absolute;
+	top: 27px;
+	left: 2px;
+	z-index: 60;
+	width: 178px;
+	border: 1px solid #b2b2b2;
+	border-bottom: none;
+	-moz-border-radius: 0 0 5px 5px;
+	-webkit-border-radius: 0 0 5px 5px;
+	border-radius:  0 0 5px 5px;
+	filter: alpha(Opacity=90);
+	opacity: 0.9;
+}
+
+#content-main-wrap form .fminput .fmfield .select .select-list li {
+	width: 160px;
+	height: 28px;
+	margin: 0;
+	padding: 0 9px;
+	border-top: 1px solid #f5f5f5;
+	border-bottom: 1px solid #c9c9c9;
+	background: none;
+	background-color: #d2d2d2;
+	color: #777;
+	font-size: 13px;
+	line-height: 28px;
+	cursor: pointer;
+}
+
+#content-main-wrap form .fminput .fmfield .select .select-list li:hover {
+	background-color: #e4e4e4;
+	color: #999;
+}
+
+#content-main-wrap form .fminput .fmfield .select .select-list li.first-row,
+#content-main-wrap form .fminput .fmfield .select .select-list li:first-child {
+	border-top: none;
+}
+
+#content-main-wrap form .fminput .fmfield .select .select-list li:last-child {
+	-moz-border-radius:  0 0 5px 5px;
+	-webkit-border-radius:  0 0 5px 5px;
+	border-radius:  0 0 5px 5px;
+}
+
+#content-main-wrap form .fminput .fmfield .select.category .select-list li:last-child {
+	-moz-border-radius:  0 0 5px 0;
+	-webkit-border-radius:  0 0 5px 0;
+	border-radius:  0 0 5px 0;
+}
+
 #content-main-wrap form .fminput .fmfield img.icon {
     float: left;
     margin: 6px 12px 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield a.switch-on {
+	display: none;
     float: left;
     width: 63px;
     height: 25px;
@@ -486,7 +610,8 @@
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list {
-    padding-top: 5px;
+	overflow: hidden;
+    padding: 5px 0 0 150px;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list h4,
@@ -504,20 +629,20 @@
     height: 20px;
     margin: 0 5px 5px 0;
     padding-left: 4px;
-    background: url(../images/tag_left_on.png) no-repeat 0 0;
+    background: url(../images/tag_left_disable.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li span {
     display: block;
     padding-right: 4px;
-    background: url(../images/tag_right_on.png) no-repeat right 0;
+    background: url(../images/tag_right_disable.png) no-repeat right 0;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li span a {
     display: block;
     height: 20px;
-    background: url(../images/tag_middle_on.png) repeat-x;
-    color: #999;
+    background: url(../images/tag_middle_disable.png) repeat-x;
+    color: #777;
     font-size: 13px;
     line-height: 20px;
     text-decoration: none;
@@ -525,17 +650,18 @@
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on {
-    background: url(../images/tag_left_disable.png) no-repeat 0 0;
+    background: url(../images/tag_left_on.png) no-repeat 0 0;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover span,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on    span {
-    background: url(../images/tag_right_disable.png) no-repeat right 0;
+    background: url(../images/tag_right_on.png) no-repeat right 0;
 }
 
 #content-main-wrap form .fminput .fmfield .tag-list ul li:hover span a,
 #content-main-wrap form .fminput .fmfield .tag-list ul li.on    span a {
-    background: url(../images/tag_middle_disable.png) repeat-x;
+	color: #999;
+    background: url(../images/tag_middle_on.png) repeat-x;
 }
 
 #content-main-wrap form .fminput .fmfield .notice {
@@ -545,13 +671,13 @@
 #content-main-wrap form .fminput .fmfield .notice.img-upload {
     position: absolute;
     top: 33px;
-    left: 140px;
+    left: 290px;
 }
 
 #content-main-wrap form .fminput .fmfield .notice.upload-notice {
     position: absolute;
     top: 56px;
-    left: 140px;
+    left: 290px;
     color: #f00;
 }
 
@@ -569,6 +695,11 @@
 #content-main-wrap form .form-btn .form-btn-wrap .notice,
 #content-main-wrap form .form-btn .form-btn-wrap .btns {
     float: left;
+}
+
+#content-main-wrap form .form-btn .form-btn-wrap .btns.upload {
+    overflow:hidden;
+    height: 27px;
 }
 
 #content-main-wrap form .form-btn .form-btn-wrap .notice {
