--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -7,7 +7,6 @@
 
 .blockOverlay {
     position: absolute !important;
-    top: 45px !important;
     background-color: #777 !important;
     cursor: default !important;
 }
@@ -92,6 +91,18 @@
     margin: 0 auto;
 }
 
+#lightbox-create-channel p.btns:hover {
+	background-image: url(../images/popup_btn_left_press.png) !important;
+}
+
+#lightbox-create-channel p.btns:hover span {
+	background-image: url(../images/popup_btn_right_press.png) !important;
+}
+
+#lightbox-create-channel p.btns:hover span a {
+	background-image: url(../images/popup_btn_middle_press.png) !important;
+}
+
 /**
 *
 * =lightbox-facebook
@@ -142,6 +153,7 @@
 #lightbox-facebook .content p {
     overflow: hidden;
     margin-bottom: 15px;
+	color: #777;
 }
 
 #lightbox-facebook .content p.confirm span {
@@ -156,6 +168,7 @@
     display: block;
     width: 14px;
     height: 15px;
+	color: #777;
     text-indent: -100000px;
 }
 
@@ -288,6 +301,7 @@
 }
 
 .lightbox-upload-video .upload-audio .upload-audio-wrap form .fminput .fmfield .highlight {
+	margin: 2px 0 0;
     color: #f00;
 }
 
@@ -397,7 +411,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 45px;
+    height: 51px;
 }
 
 .lightbox-upload-video .upload-audio .upload-audio-wrap form .form-btn .notice {
@@ -408,6 +422,9 @@
 
 .lightbox-upload-video .upload-audio .upload-audio-wrap form .form-btn .form-btn-wrap {
     float: right;
+	position: absolute;
+	bottom: 0;
+	right: 0;
 }
 
 .lightbox-upload-video .upload-audio .upload-audio-wrap form .form-btn .form-btn-wrap .btns {
@@ -424,18 +441,286 @@
 *
 **/
 
-#lightbox-play-video {
+#lightbox-play-video,
+#lightbox-play-audio {
     display: none;
+	overflow: hidden;
     width: 707px;
     height: 490px;
     margin: -245px 0 0 -354px;
 }
 
-#lightbox-play-video .btns {
+#lightbox-play-video .video-wrap iframe {
+	float: left;
+}
+
+#lightbox-play-audio .video-wrap img {
+	float: left;
+	width: 707px;
+	height: 398px;
+}
+
+#lightbox-play-video .video-wrap #video-control,
+#lightbox-play-audio .video-wrap #video-control {
+	clear: both;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 44px;
+    background-color: #000;
+}
+
+#progress-bar {
+    position: absolute;
+    top: 8px;
+    left: 0;
+    width: 100%;
+    height: 8px;
+    background: #2d3135;
+}
+
+#loaded {
+    width: 50%;
+    height: 8px;
+    background: #666;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 31;
+}
+
+#played {
+    width: 30%;
+    height:8px;
+    background: #aeaeae;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 32;
+}
+
+#play-dragger {
+    width: 18px;
+    height: 18px;
+    background: url(../images/btn_knob.png) 0 0 no-repeat;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    z-index: 35;
+    cursor: pointer;
+}
+
+#video-control ul {
+    overflow: hidden;
+    height: 25px;
+    padding-top: 16px;
+}
+
+#video-control ul li {
+    float: left;
+}
+
+#btn-prev {
+    width: 34px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) no-repeat 0 -298px;
+    cursor: pointer;
+}
+
+#btn-prev:hover,
+#btn-prev.on {
+    background-position: 0 -348px;
+}
+
+#btn-play {
+    width: 57px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) 0 2px no-repeat;
+    cursor: pointer;
+}
+
+#btn-play:hover, #btn-play.on {
+    background-position: 0 -48px;
+}
+
+#btn-pause {
+    width: 57px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) 0 -98px no-repeat;
+    cursor: pointer;
+}
+
+#btn-pause:hover,
+#btn-pause.on {
+    background-position: 0 -148px;
+}
+
+#btn-next {
+    width: 34px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) no-repeat 0 -198px;
+    cursor: pointer;
+}
+
+#btn-next:hover,
+#btn-next.on {
+    background-position: 0 -248px;
+}
+
+#volume-control {
+    width: 101px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) no-repeat 0 -398px;
+    position: relative;
+}
+
+#volume-bar {
+    width: 53px;
+    height: 5px;
+    background: url(../images/bg_volumebar.png) 0 3px no-repeat;
+    position: absolute;
+    top: 10px;
+    right: 10px; 
+}
+
+#volume-dragger {
+    width: 6px;
+    height: 16px;
+    background: url(../images/btn_dragger.png) 0 0 no-repeat;
+    position: absolute;
+    top: 7px;
+    left: 67px;
+    z-index: 35;  
+    cursor: pointer;
+}
+
+#play-time {
+    width: 446px;
+    height: 25px;
+    margin-right: 1px;
+    padding: 3px 5px 0 0;
+    background: #000 url(../images/bg_controlbar.png) 0 bottom repeat-x;
+    font-size: 13px;
+    line-height: 25px;
+    text-align: right;
+}
+
+#played-length {
+    color: #fff;
+}
+
+#play-time .divider {
+    padding: 0 2px;
+}
+
+#btn-volume {
+    width: 20px;
+    height: 13px;
+    background: url(../images/btn_controls.png) 0 -700px;
+    position: absolute;
+    top: 7px;
+    left: 8px;
+    cursor: pointer;
+}
+
+#btn-volume.quiet {
+    background-position: 0 -750px;
+}
+
+#btn-volume.loud {
+    background-position: 0 -800px;
+}
+
+#btn-volume.mute {
+    background-position: 0 -850px;
+}
+
+#btn-expand {
+    width: 27px;
+    height: 25px;
+    background: #000 url(../images/btn_controls.png) 0 -498px no-repeat;
+    cursor: pointer;
+}
+
+#btn-expand:hover, #btn-expand.on {
+    background-position: 0 -548px;
+}
+
+#lightbox-play-video .btns,
+#lightbox-play-audio .btns {
     width: 240px;
     margin: 20px auto 0;
 }
 
-#lightbox-play-video .btns a {
+#lightbox-play-video .btns a,
+#lightbox-play-audio .btns a {
     width: 237px;
+}
+
+/**
+*
+* =overlay-l
+*
+**/
+
+.overlay-l {
+	width: 253px;
+	height: 172px;
+	margin: -86px 0 0 -127px;
+	padding-left: 10px;
+	background: url(../images/bg_popup_box_s_left.png) no-repeat 0 0;
+}
+
+.overlay-l .overlay-container {
+	height: 172px;
+	padding-right: 10px;
+	background: url(../images/bg_popup_box_s_right.png) no-repeat right 0;
+}
+
+.overlay-l .overlay-container .overlay-wrap {
+	position: relative;
+	height: 122px;
+	padding: 50px 0 0;
+	background: url(../images/bg_popup_box_s_middle.png) repeat-x;
+}
+
+.overlay-l .overlay-container .overlay-wrap .btn-close {
+	position: absolute;
+	top: 7px;
+	right: -3px;
+	display: block;
+	width: 22px;
+	height: 24px;
+	background: url(../images/btn_popup_close.png) no-repeat 0 0;
+	text-indent: -100000px;
+}
+
+.overlay-l .overlay-container .overlay-wrap .btn-close:hover {
+	background: url(../images/btn_popup_close_press.png) no-repeat 0 0;
+}
+
+.overlay-l .overlay-container .overlay-wrap p.content {
+	padding: 0 8px;
+	color: #777;
+	font-weight: normal;
+	font-size: 13px;
+	text-align: left;
+}
+
+.overlay-l .overlay-container .overlay-wrap .overlay-btn {
+	overflow: hidden;
+	position: absolute;
+	bottom: 20px;
+	left: 0;
+	width: 100%;
+	text-align: center;
+}
+
+.overlay-l .overlay-container .overlay-wrap .overlay-btn .btns {
+	display: inline-block;
+	width: 67px;
+}
+
+.overlay-l .overlay-container .overlay-wrap .overlay-btn .btns:first-child {
+	margin-right: 13px;
 }
