--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -38,6 +38,50 @@ abbr, acronym {
 
 /**
 *
+* =overlay
+*
+**/
+
+#overlay-s {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1000;
+	width: 100%;
+	height: 100%;
+}
+
+#overlay-s .overlay-content {
+    position: absolute;
+    top: 45px;
+    left: 50%;
+	height: 26px;
+	padding-left: 4px;
+	background: url(../images/popmessage_style1_left.png) no-repeat 0 0;
+    color: #fff;
+	font-weight: bold;
+    font-size: 15px;
+}
+
+#overlay-s .overlay-content span {
+	display: block;
+	height: 26px;
+	line-height: 26px;
+}
+
+#overlay-s .overlay-content span.overlay-right {
+	padding-right: 4px;
+	background: url(../images/popmessage_style1_right.png) no-repeat right 0;
+}
+
+#overlay-s .overlay-content span.overlay-middle {
+	padding: 0 8px;
+	background: url(../images/popmessage_style1_middle.png) repeat-x;
+}
+
+/**
+*
 * =btns
 *
 **/
@@ -73,30 +117,45 @@ abbr, acronym {
     cursor: pointer;
 }
 
-#content-wrap         .btns:hover,
-#content-wrap         .btns.on,
-.lightbox-content .btns:hover,
-.lightbox-content .btns.on {
+#content-wrap .btns:hover {
     background: url(../images/bg_btn_left_press.png) no-repeat 0 0;
 }
 
-#content-wrap         .btns:hover span,
-#content-wrap         .btns.on       span,
-.lightbox-content .btns:hover span,
-.lightbox-content .btns.on span {
+#content-wrap .btns:hover span {
     background: url(../images/bg_btn_right_press.png) no-repeat right 0;
 }
 
-#content-wrap         .btns:hover span a,
-#content-wrap         .btns:hover span input,
-#content-wrap         .btns.on       span a,
-#content-wrap         .btns.on       span input,
-.lightbox-content .btns:hover span a,
-.lightbox-content .btns:hover span input,
-.lightbox-content .btns.on       span a,
-.lightbox-content .btns.on       span input {
+#content-wrap .btns:hover span a,
+#content-wrap .btns:hover span input {
     background: url(../images/bg_btn_middle_press.png) repeat 0 0;
     color: #999;
+}
+
+#content-wrap .btns.disable {
+    background: url(../images/bg_btn_left_disable.png) no-repeat 0 0;
+}
+
+#content-wrap .btns.disable span {
+    background: url(../images/bg_btn_right_disable.png) no-repeat right 0;
+}
+
+#content-wrap .btns.disable span a,
+#content-wrap .btns.disable span input {
+    background: url(../images/bg_btn_middle_disable.png) repeat 0 0;
+    color: #999;
+}
+
+.lightbox-content .btns:hover {
+    background: url(../images/popup_btn_left_press.png) no-repeat 0 0 !important;
+}
+
+.lightbox-content .btns:hover span {
+    background: url(../images/popup_btn_right_press.png) no-repeat right 0 !important;
+}
+
+.lightbox-content .btns:hover span a,
+.lightbox-content .btns:hover span input {
+    background: url(../images/popup_btn_middle_press.png) repeat-x !important;
 }
 
 /**
@@ -109,9 +168,9 @@ abbr, acronym {
     display: none;
     position: absolute;
     top: 115px;
-    right: 14px;
+    right: 15px;
     width: 5px;
-    z-index: 50;
+    z-index: 5;
 }
 
 .slider-vertical {
@@ -182,10 +241,11 @@ abbr, acronym {
     position: relative;
     z-index: 50000;
     width: 100%;
-    min-width: 1024px;
+    min-width: 1010px;
     height: 50px;
     background: url(../images/bg_header.png) repeat-x;
 }
+
 #logo {
     width: 50px;
     height: 29px;
@@ -195,22 +255,26 @@ abbr, acronym {
     left: 6px;
     cursor: pointer;
 }
+
 #logo:hover {
-background-position: 0 0;
+	background-position: 0 0;
 }
+
 #nav {
-height: 28px;
-position: absolute;
-top: 7px;
-right: 7px;
+	height: 28px;
+	position: absolute;
+	top: 7px;
+	right: 7px;
 }
+
 #nav li {
-height: 28px;
-font-size: 14px;
-line-height: 28px;
-float: left;
-position: relative;
+	height: 28px;
+	font-size: 14px;
+	line-height: 28px;
+	float: left;
+	position: relative;
 }
+
 #nav li#home, #nav li#guide, #nav li#browse {
 padding: 0 0 0 35px;
 width: 56px;
@@ -218,27 +282,35 @@ height: 38px;
 background: url(../images/btns.png) no-repeat;
 cursor: pointer;
 }
+
 #nav li#home {
 background-position: 0 0;
 }
+
 #nav li#home:hover, #nav li#home.on {
 background-position: 0 -50px;
 }
+
 #nav li#guide {
 background-position: 0 -100px;
 }
+
 #nav li#guide:hover, #nav li#guide.on {
 background-position: 0 -150px;
 }
+
 #nav li#browse {
 background-position: 0 -200px;
 }
+
 #nav li#browse:hover {
 background-position: 0 -250px;
 }
+
 #nav li#browse.on, #nav li#browse.on:hover {
 background-position: -100px -250px;
 }
+
 #nav li#search, #nav li#profile {
 margin: 0 0 0 5px;
 width: 120px;
@@ -246,15 +318,19 @@ height: 28px;
 background: url(../images/bg_input.png) no-repeat;
 position: relative;
 }
+
 #nav li#search {
 background-position: 0 0;
 }
+
 #nav li#profile {
 background-position: 0 -50px;
 }
+
 #nav li#search p, #nav li#profile p {
 padding: 0 32px 0 8px;
 }
+
 #nav li#search p#btn-search {
 padding: 0;
 width: 22px;
@@ -266,9 +342,11 @@ right: 5px;
 z-index: 55;
 cursor: pointer;
 }
+
 #nav li#search p#btn-search:hover {
 background-position: 0 -351px;
 }
+
 #search .textfield {
 width: 80px;
 height: 26px;
@@ -281,12 +359,15 @@ position: absolute;
 top: 1px;
 left: 8px;
 }
+
 #search:hover, #search.on {
 border-color: #666;
 }
+
 #search:hover .textfield, #search.on .textfield {
 color: #333;
 }
+
 #nav li#profile p#btn-profile {
 padding: 0;
 width: 22px;
@@ -298,6 +379,7 @@ right: 5px;
 z-index: 55;
 cursor: pointer;
 }
+
 #nav li#profile p#btn-profile:hover, #nav li#profile p#btn-profile.on {
 background-position: 0 -451px;
 }
@@ -410,6 +492,7 @@ text-overflow: ellipsis;
 -o-text-overflow: ellipsis;
 -ms-text-overflow: ellipsis;
 -moz-binding: url('ellipsis.xml#ellipsis');
+cursor: pointer;
 }
 #profile-dropdown {
 width: 120px;
@@ -461,51 +544,41 @@ background: #e4e4e4;
     position: absolute;
     top: 45px;
     left: 0;
-    z-index: 49;
+    z-index: 50;
     width: 100%;
-    min-width: 1024px;
+    min-width: 1010px;
     background: #fff url(../images/header_line.png) repeat-x 0 bottom;
-}
-
-#studio-nav     #process-notice,
-#epcurate-nav #process-notice {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 40%;
-    padding: 0 20px 3px;
-    background-color: #777;
-    color: #fff;
-    font-size: 17px;
-    filter: alpha(opacity=30);  /* IE */
-    -moz-opacity: 0.3;          /* prior to FireFox 1.7 */
-    -khtml-opacity: 0.3;        /* Old versions of Safari and "KHTML" browser engines */
-    opacity: 0.3;               /* Opera, safari, FireFox */
 }
 
 #studio-nav     .studio-nav-wrap,
 #epcurate-nav .epcurate-nav-wrap {
-    overflow: hidden;
     height: 36px;
     padding: 13px 0 0 0;
     background: url(../images/bg_pattern.png) repeat;
+}
+
+#epcurate-nav .epcurate-nav-wrap {
+    height: 49px;
+    padding: 0;
 }
 
 #studio-nav     .studio-nav-wrap     h3,
 #epcurate-nav .epcurate-nav-wrap h3 {
     float: left;
     width: auto;
-    min-width: 210px;
-    max-width: 210px;
+    min-width: 200px;
+    max-width: 200px;
     background: url(../images/icon_studio.png) no-repeat 14px 0;
     font: bold 25px/25px Helvetica;
     text-indent: 44px;
 }
 
 #epcurate-nav .epcurate-nav-wrap h3 {
-    min-width: 390px;
-    max-width: 390px;
-    background: url(../images/icon_episode.png) no-repeat 14px 0;
+    min-width: 369px;
+    max-width: 369px;
+    padding: 8px 0 0 11px;
+    background: url(../images/icon_episode.png) no-repeat 59px 13px;
+    text-indent: 42px;
 }
 
 #studio-nav     .studio-nav-wrap     h3 a,
@@ -514,36 +587,50 @@ background: #e4e4e4;
     text-decoration: none;
 }
 
-#studio-nav     .studio-nav-wrap     ul,
-#epcurate-nav .epcurate-nav-wrap ul {
+#epcurate-nav .epcurate-nav-wrap h3 a {
+    float: left;
+    margin: 5px 0 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap h3 a.btn-back {
+    position: relative;
+    float: left;
+    width: 38px;
+    height: 36px;
+    margin: 0;
+    background: url(../images/btn_back.png) no-repeat 0 0;
+    text-indent: -100000px;
+}
+
+#epcurate-nav .epcurate-nav-wrap h3 a.btn-back .tip {
+    top: 30px;
+    left: -5px;
+    width: 55px;
+    text-indent: 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap h3 a.btn-back:hover {
+    background: url(../images/btn_back_on.png) no-repeat 0 0;
+}
+
+#studio-nav .studio-nav-wrap ul {
     float: left;
     min-width: 808px;
 }
 
 #epcurate-nav .epcurate-nav-wrap ul {
+    position: absolute;
+    top: 0;
+    left: 50%;
     float: left;
-    min-width: 628px;
+    width: 399px;
+    margin: 13px 0 0 -200px;
 }
 
 #studio-nav .studio-nav-wrap ul li {
     float: left;
     margin-right: 10px;
     padding: 0 0 0 3px;
-}
-
-#epcurate-nav .epcurate-nav-wrap ul li {
-    float: left;
-    width: 152px;
-    height: 30px;
-    margin: -5px -8px 0 0;
-    background: url(../images/btn_nav.png) no-repeat 0 0;
-    line-height: 28px;
-    text-align: center;
-}
-
-#epcurate-nav .epcurate-nav-wrap ul li.on {
-    background-position: 0 -45px;
-    color: #999;
 }
 
 #studio-nav .studio-nav-wrap ul li span {
@@ -575,6 +662,83 @@ background: #e4e4e4;
     background: url(../images/bg_tab_middle.png) repeat 0 0;
 }
 
+#epcurate-nav .epcurate-nav-wrap ul li {
+    float: left;
+    width: 133px;
+    height: 30px;
+    margin: -5px -8px 0 0;
+    background: url(../images/btn_nav.png) no-repeat 0 0;
+	font-weight: bold;
+    line-height: 30px;
+    text-align: center;
+}
+
+#epcurate-nav .epcurate-nav-wrap ul li.on {
+    background-position: 0 -45px;
+    color: #999;
+}
+
+#epcurate-nav .epcurate-nav-wrap ul li a {
+    position: relative;
+    color: #777;
+    text-decoration: none;
+}
+
+#epcurate-nav .epcurate-nav-wrap ul li a:hover {
+    color: #999;
+}
+
+#epcurate-nav .epcurate-nav-wrap .tip {
+    display: none;
+    position: absolute;
+    top: 26px;
+    left: -57px;
+    z-index: 5000;
+    width: 230px;
+    height: 30px;
+    padding: 0 7px;
+    text-indent: 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap .tip img {
+	position: absolute;
+	top: -2px;
+	left: 17px;
+	border: none;
+}
+
+#epcurate-nav .epcurate-nav-wrap .tip-left {
+    display: block;
+    height: 28px;
+    padding-left: 7px;
+    background: url(../images/bg_tip_left.png) no-repeat 0 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap .tip-right {
+    display: block;
+    height: 28px;
+    padding-right: 7px;
+    background: url(../images/bg_tip_right.png) no-repeat right 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap .tip .tip-middle {
+    display: block;
+    height: 28px;
+    background: url(../images/bg_tip_middle.png) repeat-x;
+    line-height: 28px;
+    color: #777;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 31px;
+    text-align: center;
+    text-indent: 0;
+}
+
+#epcurate-nav .epcurate-nav-wrap h3 a.btn-back:hover .tip,
+#epcurate-nav .epcurate-nav-wrap ul li a:hover .tip {
+    display: block;
+}
+
 /* +content-wrap
 *----------------------------------------------------------------------------*/
 
@@ -585,38 +749,20 @@ background: #e4e4e4;
     z-index: 49;
     overflow: hidden;
     width: 100%;
-    min-width: 1024px;
+    min-width: 1010px;
     height: 100%;
     background: url(../images/bg_main.png) repeat;
 }
 
 #content-nav {
     float: left;
-    width: 210px;
+    width: 200px;
 }
 
 #content-main {
     position: relative;
     float: left;
     min-width: 776px;
-}
-
-@media all and (max-width: 1372px) {
-    #content-main {
-        width: 776px;
-    }
-}
-
-@media all and (max-width: 1828px) and (min-width: 1373px) {
-    #content-main {
-        width: 84%;
-    }
-}
-
-@media all and (min-width: 1829px) {
-    #content-main {
-        width: 87%;
-    }
 }
 
 /* +content-main
@@ -669,34 +815,40 @@ background: #e4e4e4;
     width: 130px;
     height: 30px;
     padding: 0 7px;
-    background: url(../images/bg_tip_top.png) no-repeat 25px top;
     text-indent: 0;
+}
+
+#title-func h2 a.reload .tip img {
+	position: absolute;
+	top: -2px;
+	left: 23px;
+	border: none;
 }
 
 #title-func h2 a.reload .tip-left {
     display: block;
     height: 28px;
     padding-left: 7px;
-    background: url(../images/bg_tip_top_left.png) no-repeat 0 0;
+    background: url(../images/bg_tip_left.png) no-repeat 0 0;
 }
 
 #title-func h2 a.reload .tip-right {
     display: block;
     height: 28px;
     padding-right: 7px;
-    background: url(../images/bg_tip_top_right.png) no-repeat right 0;
+    background: url(../images/bg_tip_right.png) no-repeat right 0;
 }
 
 #title-func h2 a.reload .tip .tip-middle {
     display: block;
     height: 28px;
-    background: url(../images/bg_tip_top_middle.png) repeat-x;
+    background: url(../images/bg_tip_middle.png) repeat-x;
     line-height: 28px;
     color: #777;
     font-style: normal;
     font-size: 13px;
     line-height: 31px;
-    text-align: cneter;
+    text-align: center;
     text-indent: 0;
 }
 
@@ -751,9 +903,13 @@ background: #e4e4e4;
     text-decoration: none;
 }
 
+#func-nav ul li.btns {
+	width: 160px;
+}
+
 #func-nav ul li.btns a {
-    height: 29px;
-    padding: 2px 0 0;
+    height: 30px;
+    padding: 1px 0 0;
 }
 
 #func-nav ul li a:hover {
@@ -846,105 +1002,104 @@ padding: 4px 10px 0;
 *----------------------------------------------------------------------------*/
 
 #footer-control {
-width: 26px;
-height: 48px;
-background: url(../images/bg_footercontrol.png) no-repeat;
-position: absolute;
-left: 0;
-bottom: 0;
-z-index: 20000;
-cursor: pointer;
+	width: 26px;
+	height: 48px;
+	background: url(../images/bg_footercontrol.png) no-repeat;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	z-index: 20000;
+	cursor: pointer;
 }
+
 #footer-control.on {
-background-position: 0 -50px;
+	background-position: 0 -50px;
 }
+
 #footer {
-width: 100%;
-min-width: 1024px;
-height: 48px;
-background: url(../images/bg_footer.png) repeat-x;
-position: absolute;
-bottom: 0;
-left: 0;
-z-index: 10000;
+	width: 100%;
+	min-width: 1010px;
+	height: 48px;
+	background: url(../images/bg_footer.png) repeat-x;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	z-index: 10000;
 }
-#curator-list {
-height: 30px;
-position: absolute;
-left: 40px;
-top: 8px;
+
+#footer ul#footer-list {
+	height: 28px;
+	position: absolute;
+	top: 9px;
+	right: 5px;
 }
-#curator-list li {
-margin: 0 5px 0 0;
-width: 30px;
-height: 30px;
-float: left;
-cursor: pointer;
+
+#footer ul#footer-list li {
+	position: relative;
+	float: left;
+	width: 112px;
+	height: 28px;
+	margin: 0 0 0 5px;
+	padding: 0 0 0 8px;
+	background: url(../images/bg_input.png) 0 -50px no-repeat;
+	font-size: 13px;
+	line-height: 28px;
 }
-#curator-list li#list-title {
-width: 110px;
-font-size: 13px;
-line-height: 30px;
-cursor: default;
+
+#footer ul#footer-list li p.select-btn {
+	position: absolute;
+	top: 3px;
+	right: 5px;
+	z-index: 55;
+	width: 22px;
+	height: 23px;
+	background: url(../images/btns.png) 0 -400px no-repeat;
+	cursor: pointer;
 }
-#curator-list li img {
-width: 30px;
-height: 30px;
+
+#footer ul#footer-list li p.select-txt {
+	cursor: pointer;
 }
-#curator-list li.fade img {
-filter: alpha(Opacity=50);
-opacity: 0.5;
+
+#footer ul#footer-list li p.select-btn.on,
+#footer ul#footer-list li p.select-btn:hover {
+	background-position: 0 -451px;
 }
-#curator-list li.anchor img {
-filter: alpha(Opacity=100);
-opacity: 1.0;
+
+#footer ul#footer-list li ul.select-list {
+	display: none;
+	position: absolute;
+	bottom: 36px;
+	right: 0;
+	z-index: 60;
+	width: 120px;
+	border: 1px solid #b2b2b2;
+	border-bottom: none;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+	border-radius: 5px 5px 0 0;
+	filter: alpha(Opacity=90);
+	opacity: 0.9;
 }
-#footer-list {
-height: 28px;
-position: absolute;
-top: 9px;
-right: 5px;
+
+#footer ul#footer-list li ul.select-list li {
+	width: 102px;
+	margin: 0;
+	padding: 0 9px;
+	border-top: 1px solid #f5f5f5;
+	border-bottom: 1px solid #c9c9c9;
+	background: none;
+	background-color: #d2d2d2;
+	cursor: pointer;
 }
-#footer-list li {
-font-size: 13px;
-line-height: 28px;
-float: left;
+
+#footer ul#footer-list li ul.select-list li:hover {
+	background-color: #e4e4e4;
 }
-#footer-list li:last-child {
-background: none;
-}
-#footer-list li#sitelang, #footer-list li#siteinfo {
-margin: 0 0 0 5px;
-width: 120px;
-height: 28px;
-background: url(../images/bg_input.png) 0 -50px no-repeat;
-position: relative;
-}
-#footer-list li#sitelang p#btn-sitelang, #footer-list li#siteinfo p#btn-siteinfo {
-width: 22px;
-height: 23px;
-background: url(../images/btns.png) 0 -400px no-repeat;
-position: absolute;
-top: 3px;
-right: 5px;
-z-index: 55;
-cursor: pointer;
-}
-#footer-list li#sitelang p#btn-sitelang:hover, #footer-list li#siteinfo p#btn-siteinfo:hover {
-background-position: 0 -451px;
-}
-#selected-sitelang, #selected-siteinfo {
-padding: 0 0 0 8px;
-}
-#sitelang-dropdown, #siteinfo-dropdown {
-display: none;
-}
-#copyright {
-height: 48px;
-font-size: 13px;
-line-height: 48px;
-text-align: right;
-position: absolute;
-top: 0;
-right: 268px;
+
+#footer ul#footer-list li ul.select-list li:first-child {
+	border-top: none;
+	-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;
+	border-radius: 5px 5px 0 0;
 }
