--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -46,6 +46,12 @@ p.auto-height {
     background-color: #000;
 }
 
+#epcurate-curation #video-player .video #titlecard-outer {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 /**
 *
 * =video-control
@@ -905,12 +911,16 @@ padding-right: 8px;
 #epcurate-curation #cur-edit .background-container {
 	position: relative;
 	float: left;
-	margin-bottom: 10px;
+	margin-bottom: 3px;
 }
 
 #epcurate-curation #cur-edit .background-container p {
-	margin-bottom: 10px;
+	margin-bottom: 3px;
 	font-weight: bold;
+}
+
+#epcurate-curation #cur-edit .background-container p.highlight {
+    color: #f00;
 }
 
 #epcurate-curation #cur-edit .background-container p.radio-list {
@@ -964,6 +974,10 @@ padding-right: 8px;
 
 #epcurate-curation #cur-edit .background-container .bg-img p.img img {
 	vertical-align: middle;
+}
+
+#epcurate-curation #cur-edit .background-container .bg-img p.img img.loading {
+    display: none;
 }
 
 #epcurate-curation #cur-edit .background-container .bg-img .btns {
@@ -1075,76 +1089,136 @@ padding-right: 8px;
 	cursor: pointer;
 }
 
+#titlecard-outer.c-fff,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-fff,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-fff,
 #epcurate-curation #cur-edit .color-list li.c-fff {
-	background-color: #fff;
+	background-color: #fff !important;
 }
 
+#titlecard-outer.c-eee,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-eee,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-eee,
 #epcurate-curation #cur-edit .color-list li.c-eee {
-	background-color: #eee;
+	background-color: #eee !important;
 }
 
+#titlecard-outer.c-bbb,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-bbb,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-bbb,
 #epcurate-curation #cur-edit .color-list li.c-bbb {
-	background-color: #bbb;
+	background-color: #bbb !important;
 }
 
+#titlecard-outer.c-777,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-777,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-777,
 #epcurate-curation #cur-edit .color-list li.c-777 {
-	background-color: #777;
+	background-color: #777 !important;
 }
 
+#titlecard-outer.c-333,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-333,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-333,
 #epcurate-curation #cur-edit .color-list li.c-333 {
-	background-color: #333;
+	background-color: #333 !important;
 }
 
+#titlecard-outer.c-000,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-000,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-000,
 #epcurate-curation #cur-edit .color-list li.c-000 {
-	background-color: #000;
+	background-color: #000 !important;
 }
 
+#titlecard-outer.c-f00,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-f00,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-f00,
 #epcurate-curation #cur-edit .color-list li.c-f00 {
-	background-color: #f00;
+	background-color: #f00 !important;
 }
 
+#titlecard-outer.c-f60,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-f60,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-f60,
 #epcurate-curation #cur-edit .color-list li.c-f60 {
-	background-color: #f60;
+	background-color: #f60 !important;
 }
 
+#titlecard-outer.c-ff0,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-ff0,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-ff0,
 #epcurate-curation #cur-edit .color-list li.c-ff0 {
-	background-color: #ff0;
+	background-color: #ff0 !important;
 }
 
+#titlecard-outer.c-090,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-090,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-090,
 #epcurate-curation #cur-edit .color-list li.c-090 {
-	background-color: #090;
+	background-color: #090 !important;
 }
 
+#titlecard-outer.c-03f,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-03f,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-03f,
 #epcurate-curation #cur-edit .color-list li.c-03f {
-	background-color: #03f;
+	background-color: #03f !important;
 }
 
+#titlecard-outer.c-60f,
 #content-main #epcurate-curation #cur-edit .font-container a span.c-60f,
 #epcurate-curation #cur-edit .background-container .bg-color a span.c-60f,
 #epcurate-curation #cur-edit .color-list li.c-60f {
-	background-color: #60f;
+	background-color: #60f !important;
+}
+
+#titlecard-inner.c-fff {
+	color: #fff !important;
+}
+
+#titlecard-inner.c-eee {
+	color: #eee !important;
+}
+
+#titlecard-inner.c-bbb {
+	color: #bbb !important;
+}
+
+#titlecard-inner.c-777 {
+	color: #777 !important;
+}
+
+#titlecard-inner.c-333 {
+	color: #333 !important;
+}
+
+#titlecard-inner.c-000 {
+	color: #000 !important;
+}
+
+#titlecard-inner.c-f00 {
+	color: #f00 !important;
+}
+
+#titlecard-inner.c-f60 {
+	color: #f60 !important;
+}
+
+#titlecard-inner.c-ff0 {
+	color: #ff0 !important;
+}
+
+#titlecard-inner.c-090 {
+	color: #090 !important;
+}
+
+#titlecard-inner.c-03f {
+	color: #03f !important;
+}
+
+#titlecard-inner.c-60f {
+	color: #60f !important;
 }
 
 #epcurate-curation #cur-edit .color-list li:first-child {
